RESOLVED FIXED310355
Invalidate ::slotted nested pseudo-elements
https://bugs.webkit.org/show_bug.cgi?id=310355
Summary Invalidate ::slotted nested pseudo-elements
Anne van Kesteren
Reported 2026-03-20 06:41:32 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-03-20 06:44:56 PDT
EWS
Comment 2 2026-03-21 00:18:57 PDT
Committed 309672@main (099f5a48c35a): <https://commits.webkit.org/309672@main> Reviewed commits have been landed. Closing PR #61004 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-21 00:19:13 PDT
Note You need to log in before you can comment on or make changes to this bug.