Invalidate ::slotted nested pseudo-elements https://bugs.webkit.org/show_bug.cgi?id=310355

Reviewed by Tim Nguyen.

When we have ::slotted pseudo-element rules we already performed
invalidation, except we did not go into user agent shadow trees to
invalidate the nodes there, which meant that nested pseudo-elements
were not properly invalidated.

Test: imported/w3c/web-platform-tests/css/css-scoping/slotted-user-agent-part-invalidation.html

Upstream:

    https://github.com/web-platform-tests/wpt/pull/58644

Canonical link: https://commits.webkit.org/309672@main